--- a/styles.css
+++ b/styles.css
@@ -31,19 +31,10 @@ header {
     color: #ecf0f1;
 }
 
-section {
-    margin-bottom: 20px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.container
-{
+.container {
     display: inline-block;
-    padding-left:40vh;
-   width: 100vh;
+    padding-left: 40vh;
+    width: 100vh;
     margin: 5px;
     border-radius: 5px;
 }
@@ -52,8 +43,17 @@ h2 {
     color: #3498db;
 }
 
-#about img {   
-    margin-top: 20px;  
+section {
+    margin-bottom: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#about img {
+    margin-top: 20px;
+    max-width: 100%;  /* Ensure images are responsive */
 }
 
 #skills ul {
@@ -68,7 +68,8 @@ h2 {
     margin: 5px;
     border-radius: 5px;
 }
-.lg{
+
+.lg {
     display: flex;
 }
 
@@ -105,5 +106,14 @@ footer {
 
     #about img {
         margin-top: 10px;
+    }
+
+    .container {
+        padding-left: 20px;
+        width: auto;
+    }
+
+    section {
+        padding: 10px;
     }
 }
