--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ section {
 
 #about img {
     margin-top: 20px;
-    max-width: 100%;  /* Ensure images are responsive */
+    max-width: 100%; 
 }
 
 #skills ul {
@@ -109,7 +109,7 @@ footer {
     }
 
     .container {
-        padding-left: 10px; /* Adjust padding for smaller screens */
+        padding-left: 10px;
         width: auto;
     }
 
@@ -118,7 +118,7 @@ footer {
     }
 
     .lg {
-        flex-direction: column; /* Adjust image layout in projects for smaller screens */
+        flex-direction: column; 
     }
 
     .project img {
